Rewrite MapColoringProblem to correctly build and use constraints